--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../Css/Main.css">
-    <title>Document</title>
+    <title>Match Color</title>
 </head>
 
 <body>
     <div class="container" id="container">
         <div id="color-picker" class="top-buttons"><i class="bi bi-eyedropper"></i></div>
         <div id="github" class="top-buttons"><i class="bi bi-github"></i></div>
+
         <!-- <div class="color-container">
             <div class="card-header">
                 <h3>title</h3>
@@ -20,9 +21,7 @@
             </div>
             <div class="card-body">
                 <div class="color-box">
-                    <div class="pre">
-                        <h3 class="hex">1</h3>
-                    </div>
+                    <h3 class="hex">1</h3>
                 </div>
             </div>
         </div> -->
